--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ modmenu_version=15.0.0
 # Mod Properties
 mod_version=0.0.1
 maven_group=net.xeroniodir
-archives_base_name=cdib
+archives_base_name=cidb
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.136.0+1.21.8
