--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ loom {
     splitEnvironmentSourceSets()
 
     mods {
-        "indigonius" {
+        "cidb" {
             sourceSet sourceSets.main
             sourceSet sourceSets.client
         }
