--- a/build.gradle
+++ b/build.gradle
@@ -29,17 +29,16 @@ fabricApi {
 
 repositories {
     maven {
-        name 'Xander Maven'
-        url 'https://maven.isxander.dev/releases'
+        name = "Terraformers"
+        url = "https://maven.terraformersmc.com/releases"
     }
     maven {
-        name = "Terraformers"
-        url = "https://maven.terraformersmc.com/"
+        name = "Xander Maven"
+        url = "https://maven.isxander.dev/releases"
     }
 }
 
 dependencies {
-    // To change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
