--- a/gradle.properties
+++ b/gradle.properties
@@ -2,15 +2,16 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.21.8
-yarn_mappings=1.21.8+build.1
-loader_version=0.18.1
+min_minecraft_version=1.21.6
+max_minecraft_version=1.21.8
+yarn_mappings=1.21.6+build.1
+loader_version=0.17.0
 yacl_version=3.7.1+1.21.6-fabric
 modmenu_version=15.0.0
 # Mod Properties
-mod_version=0.0.1
+mod_version=0.1.0
 maven_group=net.xeroniodir
-archives_base_name=CIDB
+archives_base_name=cidb
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.136.1+1.21.8
+fabric_version=0.136.0+1.21.8
