--- a/build.gradle
+++ b/build.gradle
@@ -29,44 +29,51 @@ fabricApi {
 
 repositories {
     maven {
-        name = "Terraformers"
-        url = "https://maven.terraformersmc.com/releases"
+        name 'Xander Maven'
+        url 'https://maven.isxander.dev/releases'
     }
     maven {
-        name = "Xander Maven"
-        url = "https://maven.isxander.dev/releases"
+        name = "Terraformers"
+        url = "https://maven.terraformersmc.com/"
+    }
+    maven {
+        url = "https://maven.midnightdust.eu/releases"
     }
 }
 
 dependencies {
-    minecraft "com.mojang:minecraft:${project.minecraft_version}"
+    // To change the versions see the gradle.properties file
+    minecraft "com.mojang:minecraft:${project.min_minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
     modImplementation "dev.isxander:yet-another-config-lib:${project.yacl_version}"
-    modApi ("com.terraformersmc:modmenu:${project.modmenu_version}")
+    modImplementation include ("eu.midnightdust:midnightlib:${project.midnightlib_version}")
+    modApi("com.terraformersmc:modmenu:${project.modmenu_version}")
 }
 
 processResources {
     inputs.property "version", project.version
-    inputs.property "minecraft_version", project.minecraft_version
+    inputs.property "minecraft_version", project.min_minecraft_version
+    inputs.property "min_minecraft_version", project.min_minecraft_version
+    inputs.property "max_minecraft_version", project.max_minecraft_version
     inputs.property "loader_version", project.loader_version
+    inputs.property "yacl_version", project.yacl_version;
     filteringCharset "UTF-8"
 
     filesMatching("fabric.mod.json") {
         expand "version": project.version,
-                "minecraft_version": project.minecraft_version,
-                "loader_version": project.loader_version
+                "min_minecraft_version": project.min_minecraft_version,
+                "max_minecraft_version": project.max_minecraft_version,
+                "yacl_version": project.yacl_version,
+                "minecraft_version": project.min_minecraft_version,
+                "loader_version": project.loader_version;
     }
 }
 
 def targetJavaVersion = 21
 tasks.withType(JavaCompile).configureEach {
-    // ensure that the encoding is set to UTF-8, no matter what the system default is
-    // this fixes some edge cases with special characters not displaying correctly
-    // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
-    // If Javadoc is generated, this must be specified in that task too.
     it.options.encoding = "UTF-8"
     if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
         it.options.release.set(targetJavaVersion)
@@ -78,9 +85,6 @@ java {
     if (JavaVersion.current() < javaVersion) {
         toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
     }
-    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-    // if it is present.
-    // If you remove this line, sources will not be generated.
     withSourcesJar()
 }
 
@@ -90,7 +94,6 @@ jar {
     }
 }
 
-// configure the maven publication
 publishing {
     publications {
         create("mavenJava", MavenPublication) {
@@ -99,11 +102,6 @@ publishing {
         }
     }
 
-    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
     repositories {
-        // Add repositories to publish to here.
-        // Notice: This block does NOT have the same function as the block in the top level.
-        // The repositories here will be used for publishing your artifact, not for
-        // retrieving dependencies.
     }
 }
