--- a/build.gradle
+++ b/build.gradle
@@ -37,19 +37,16 @@ repositories {
         url = "https://maven.terraformersmc.com/"
     }
     maven {
+        name = "MidNight"
         url = "https://maven.midnightdust.eu/releases"
     }
 }
 
 dependencies {
-    // To change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.min_minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-    modImplementation "dev.isxander:yet-another-config-lib:${project.yacl_version}"
-    modImplementation include ("eu.midnightdust:midnightlib:${project.midnightlib_version}")
     modApi("com.terraformersmc:modmenu:${project.modmenu_version}")
 }
 
@@ -59,14 +56,12 @@ processResources {
     inputs.property "min_minecraft_version", project.min_minecraft_version
     inputs.property "max_minecraft_version", project.max_minecraft_version
     inputs.property "loader_version", project.loader_version
-    inputs.property "yacl_version", project.yacl_version;
     filteringCharset "UTF-8"
 
     filesMatching("fabric.mod.json") {
         expand "version": project.version,
                 "min_minecraft_version": project.min_minecraft_version,
                 "max_minecraft_version": project.max_minecraft_version,
-                "yacl_version": project.yacl_version,
                 "minecraft_version": project.min_minecraft_version,
                 "loader_version": project.loader_version;
     }
