List Options (Int List, Float List..., Int List List)

--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,8 @@ fabricApi {
 
 repositories {
     maven {
-        name = "MidNight"
-        url = "https://maven.midnightdust.eu/releases"
+        name = "Terraformers"
+        url = "https://maven.terraformersmc.com/"
     }
 }
 
