--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,26 @@ pluginManagement {
             name = 'Fabric'
             url = 'https://maven.fabricmc.net/'
         }
+        maven{
+            name = "KikuGie Snapshots"
+            url = "https://maven.kikugie.dev/snapshots"
+        }
         gradlePluginPortal()
+    }
+}
+
+plugins {
+    id("dev.kikugie.stonecutter") version "0.7.11"
+}
+
+stonecutter {
+    // Enable Groovy DSL, as Stonecutter uses Kotlin by default
+    kotlinController = false
+    centralScript = "build.gradle"
+
+    // Configuration goes here
+    create(getRootProject()) {
+        versions "1.21.2", "1.21.6",
+                "1.21.9", "1.21"
     }
 }
