--- a/build.gradle
+++ b/build.gradle
@@ -86,4 +86,9 @@ loom {
             sourceSet sourceSets.client
         }
     }
+
+    runConfigs.all {
+        ideConfigGenerated true // Run configurations are not created for subprojects by default
+        runDir "../../run" // Use a shared run folder and just create separate worlds
+    }
 }
